force-app/main/default/objects/Program_Plan_Caveat__c/Program_Plan_Caveat__c.object-meta.xml
<CustomObject>
    <description>Caveat applicable to a program plan&apos;s requirements e.g. &quot;Grade Point Avg Required&quot; or course substitution rules.</description>
    <label>Program Plan Caveat</label>
    <nameField>
        <label>Caveat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Plan Caveats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>