force-app/main/default/objects/Program_Plan_Caveat__c/fields/Caveat_Enumeration__c.field-meta.xml
<CustomField>
    <fullName>Caveat_Enumeration__c</fullName>
    <description>For display purposes, apply this # to the requirements it applies to.</description>
    <inlineHelpText>For display purposes, apply this # to the requirements it applies to.</inlineHelpText>
    <label>Caveat Enumeration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>