force-app/main/default/objects/Program_Plan_Caveat__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short description of the caveat.</description>
    <inlineHelpText>Short description of the caveat.</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>