force-app/main/default/objects/Program_Plan_Caveat__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Program Plan that this caveat applies to.</description>
    <inlineHelpText>The Program Plan that this caveat applies to.</inlineHelpText>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Program Plan Caveats</relationshipLabel>
    <relationshipName>Caveats</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>